Add a secret fourth option to the list

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
         <li>Option 1 - This one is enticing, no? You're welcome to select this.</li>
         <li>Option 2 - This option is a bit more <i>mysterious</i> in nature. <i>Spooky.</i></li>
         <li>Option 3 - Not for the faint of heart. Proceed with <b>caution.</b></li>
+        <li>Option 4 - This one is a secret...</li>
       </ul>
   </p>
 </container>
