--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <container>
   <h1>Our menu for the day:</h1>
     <ul>
-      <li>Apples</li>
-      <li>Oranges</li>
+      <li>Freshly baked apple pie topped with cinnamon-flavored whipped cream</li>
+      <li>Buttery pound cake made with orange zest, topped with vanilla icing</li>
       <li>Pan-seared ahi tuna steak with a side of asparagus, topped with a dash of olive oil and himalayan sea salt</b></li>
     </ul>
 </container>
