Apologize for providing fake support number and add directions to guide users to actual support

--- a/contact.html
+++ b/contact.html
@@ -4,4 +4,7 @@
   <h3>To contact our support, don't. Alternatively, you're welcome to stare at this fake number while your issue persists.</h3>
   <br>
   <h3>555-555-5555</h3>
+  <br>
+  <p>I am making this tiny as I am ashamed of my actions and would like to apologize. If you <em>still</em> need support, please reach out to our staff
+     via our front desk M-F 9AM-6PM CST - they will be happy to assist you with any questions that you may have.</p>
 </container>
